hard-gists/3805436/run.log
=== Docker Run Log for 3805436 ===
Started at: Mi 29. Okt 14:00:53 CET 2025

[2025-10-29 14:00:53] START: Running container for 3805436
[2025-10-29 14:00:54] SUCCESS: Container 4e455036dcc5664f9358caded08cb8ab7a6add82eaf37cae1a17eff264703e53 started for 3805436
=== Container logs for 3805436 ===
  File "/snippet.py", line 44
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3805436 ===
[2025-10-29 14:00:56] INFO: Container 4e455036dcc5664f9358caded08cb8ab7a6add82eaf37cae1a17eff264703e53 has stopped
